--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Form w Bootstrap</title>
+    <title>Validating Form</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="app.js"></script>
 </head>
 
 <body>
@@ -20,14 +21,13 @@
                 Payment Form Example
             </div>
             <div class="card-body">
-                <div class="alert alert-danger" role="alert">
-                    Some Fields are missing.
-                </div>
-                <form>
+                <div id="alertDiv"><!--¡Aquí va la alerta de dato mal ingresado!--></div>
+                <form id="form">
                     <div class="row g-3">
                         <div class="col-6">
                             <label for="inputCardNumber" class="form-label">Card #</label>
-                            <input type="number" class="form-control" id="inputCardNumber" placeholder="XXXXXX">
+                            <input type="number" class="form-control" id="inputCardNumber" value=""
+                                placeholder="XXXXXX">
                         </div>
                         <div class="col-3">
                             <label for="inputCarCvc" class="form-label">CVC #</label>
@@ -40,12 +40,12 @@
                     </div>
                     <div class="row g-3">
                         <div class="col-6">
-                            <label for="inputCarCvc" class="form-label">First Name</label>
-                            <input type="text" class="form-control" id="inputCardCvc" placeholder="">
+                            <label for="inputFirstName" class="form-label">First Name</label>
+                            <input type="text" class="form-control" id="inputFirstName" placeholder="">
                         </div>
                         <div class="col-6">
-                            <label for="inputAmount" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="inputAmount" placeholder="">
+                            <label for="inputLastName" class="form-label">Last Name</label>
+                            <input type="text" class="form-control" id="inputLastName" placeholder="">
                         </div>
                     </div>
                     <div class="row g-3">
@@ -54,15 +54,19 @@
                             <input type="text" class="form-control" id="inputCity" placeholder="">
                         </div>
                         <div class="col-md-3">
-                            <label for="inputState" class="form-label">Pick a state</label>
+                            <label for="inputState" class="form-label">Select a state</label>
                             <select id="inputState" class="form-select">
-                                <option selected>Pick a state</option>
-                                <option>...</option>
+                                <option selected>Select a state</option>
+                                <option>Alabama</option>
+                                <option>Boston</option>
+                                <option>California</option>
+                                <option>Denver</option>
+                                <option>Other</option>
                             </select>
                         </div>
                         <div class="col-3">
                             <label for="inputPostalCode" class="form-label">Postal Code</label>
-                            <input type="number" class="form-control" id="input" placeholder="">
+                            <input type="number" class="form-control" id="inputPostalCode" placeholder="">
                         </div>
                     </div>
                     <div class="row g-3">
@@ -70,27 +74,27 @@
                             We Accept:
                             <div class="col-8 mt-2 bg-secondary-subtle rounded">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="mastercard"
+                                    <input class="form-check-input" type="radio" id="masterCard"
                                         name="inlineRadioOptions">
                                     <label class="form-check-label" for="mastercard"><i
                                             class="fa-brands fa-cc-mastercard"></i>
                                     </label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="Americancard"
+                                    <input class="form-check-input" type="radio" id="americanCard"
                                         name="inlineRadioOptions">
                                     <label class="form-check-label" for="Americancard"><i
                                             class="fa-brands fa-cc-amex"></i>
                                     </label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="Visacard"
+                                    <input class="form-check-input" type="radio" id="VisaCard"
                                         name="inlineRadioOptions">
                                     <label class="form-check-label" for="Visacard"><i class="fa-brands fa-cc-visa"></i>
                                     </label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" id="Paypalcard"
+                                    <input class="form-check-input" type="radio" id="paypalMethod"
                                         name="inlineRadioOptions">
                                     <label class="form-check-label" for="Paypalcard"><i
                                             class="fa-brands fa-cc-paypal"></i>
