--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="app.js"></script>
+
 </head>
 
 <body>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="card-footer d-grid gap-2 d-md-flex justify-content-md-end">
                             <button class="btn btn-secondary me-md-2" type="button">Cancel</button>
-                            <button class="btn btn-primary" type="button">Send</button>
+                            <button class="btn btn-primary" type="submit">Send</button>
                         </div>
                     </div>
                 </form>
@@ -121,11 +121,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
